🐛 FIX: Spacing and Depreciation in Card

--- a/src/panel/editor.scss
+++ b/src/panel/editor.scss
@@ -22,13 +22,12 @@
 		}
 	}
 
-	
+
 	.card {
 		padding: 0;
 		max-width: 100%;
 	}
 	.card-body {
-		padding-top: 0 !important;
 		padding-bottom: 0 !important;
 	}
 }
